[package]
name                 = "biome_analyze"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's analyzer shared infrastructure"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_console            = { workspace = true }
biome_deserialize        = { workspace = true, optional = true }
biome_deserialize_macros = { workspace = true, optional = true }
biome_diagnostics        = { workspace = true }
biome_parser             = { workspace = true }
biome_rowan              = { workspace = true }
biome_suppression        = { workspace = true }
camino                   = { workspace = true }
enumflags2               = { workspace = true }
indexmap                 = { workspace = true }
rustc-hash               = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
insta = { workspace = true }

[features]
schema = ["biome_console/schema", "dep:schemars", "serde"]
serde  = ["dep:biome_deserialize", "dep:biome_deserialize_macros", "dep:serde"]

[lints]
workspace = true
