[package]
name                 = "biome_analyze_macros"
version              = "0.0.0"
authors.workspace    = true
edition.workspace    = true
description          = "Procedural macros for Biome analyzer code generation"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
publish              = false

[lib]
proc-macro = true

[dependencies]
anyhow            = { workspace = true }
biome_string_case = { workspace = true }
camino            = { workspace = true }
prettyplease      = { workspace = true }
proc-macro2       = { workspace = true }
quote             = { workspace = true }
syn               = { version = "2.0", features = ["extra-traits", "full", "parsing"] }

[lints]
workspace = true
