[package]
name                 = "biome_aria"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "Utilities to create ARIA query for biome_js_analyze"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_aria_metadata = { workspace = true }

[lints]
workspace = true
