[package]
name                 = "biome_aria_metadata"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "Metadata about ARIA properties and ARIA roles"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
biome_deserialize        = { workspace = true }
biome_deserialize_macros = { workspace = true }
biome_string_case        = { workspace = true }
prettyplease             = "0.2.37"
proc-macro2              = { workspace = true, features = ["span-locations"] }
quote                    = { workspace = true }
serde                    = { workspace = true }
serde_json               = { workspace = true }
syn                      = "2.0.76"

[lints]
workspace = true
