[package]
authors.workspace    = true
categories.workspace = true
description          = "Astro factory for creating AST nodes"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_astro_factory"
repository.workspace = true
version              = "0.1.0"

[dependencies]
biome_astro_syntax = { workspace = true }
biome_rowan        = { workspace = true }

[dev-dependencies]

[lints]
workspace = true