[package]
authors.workspace    = true
categories.workspace = true
description          = "Astro formatter"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_astro_formatter"
repository.workspace = true
version              = "0.1.0"

[dependencies]
biome_astro_syntax   = { workspace = true }
biome_formatter      = { workspace = true }
biome_js_formatter   = { workspace = true }
biome_rowan          = { workspace = true }

[dev-dependencies]
biome_astro_factory  = { workspace = true }
biome_astro_parser   = { workspace = true }
biome_formatter_test = { workspace = true }

[lints]
workspace = true