[package]
authors.workspace    = true
categories.workspace = true
description          = "Astro syntax"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_astro_syntax"
repository.workspace = true
version              = "0.1.0"

[dependencies]
biome_rowan     = { workspace = true }
biome_text_size = { workspace = true }
serde           = { workspace = true }

[dev-dependencies]

[lints]
workspace = true