[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's command line interface"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_cli"
publish              = false
repository.workspace = true
version              = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "biome"
path = "src/main.rs"

[dependencies]
anyhow                   = { workspace = true }
biome_analyze            = { workspace = true }
biome_configuration      = { workspace = true }
biome_console            = { workspace = true }
biome_deserialize        = { workspace = true }
biome_deserialize_macros = { workspace = true }
biome_diagnostics        = { workspace = true }
biome_flags              = { workspace = true }
biome_formatter          = { workspace = true }
biome_fs                 = { workspace = true }
biome_js_analyze         = { workspace = true }
biome_js_formatter       = { workspace = true }
biome_json_formatter     = { workspace = true }
biome_json_parser        = { workspace = true }
biome_json_syntax        = { workspace = true }
biome_lsp                = { workspace = true }
biome_migrate            = { workspace = true }
biome_rowan              = { workspace = true }
biome_service            = { workspace = true }
biome_text_edit          = { workspace = true }
bpaf                     = { workspace = true, features = ["bright-color"] }
crossbeam                = { workspace = true }
dashmap                  = { workspace = true }
hdrhistogram             = { version = "7.5.4", default-features = false }
indexmap                 = { workspace = true }
path-absolutize          = { version = "3.1.1", optional = false, features = ["use_unix_paths_on_wasm"] }
quick-junit              = "0.5.0"
rayon                    = { workspace = true }
regex                    = { workspace = true }
rustc-hash               = { workspace = true }
serde                    = { workspace = true, features = ["derive"] }
serde_json               = { workspace = true }
smallvec                 = { workspace = true }
tokio                    = { workspace = true, features = ["io-std", "io-util", "net", "time", "rt", "sync", "rt-multi-thread", "macros"] }
tracing                  = { workspace = true }
tracing-appender         = "0.2.3"
tracing-subscriber       = { workspace = true, features = ["env-filter", "json"] }
tracing-tree             = "0.4.0"

[target.'cfg(unix)'.dependencies]
libc  = "0.2.161"
tokio = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.43"

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]
biome_css_formatter  = { workspace = true }
biome_js_formatter   = { workspace = true }
biome_json_formatter = { workspace = true }
biome_json_parser    = { workspace = true }
insta                = { workspace = true }
regex                = { workspace = true }
tokio                = { workspace = true, features = ["io-util"] }

[features]
docgen            = ["bpaf/docgen"]
experimental-grit = ["biome_service/experimental-grit"]
experimental-html = ["biome_service/experimental-html"]

[lints]
workspace = true
