[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's command line interface"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_cli"
publish              = false
repository.workspace = true
version              = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "biome"
path = "src/main.rs"

[dependencies]
anyhow                   = { workspace = true }
biome_analyze            = { workspace = true }
biome_configuration      = { workspace = true }
biome_console            = { workspace = true }
biome_css_analyze        = { workspace = true }
biome_css_syntax         = { workspace = true }
biome_deserialize        = { workspace = true }
biome_deserialize_macros = { workspace = true }
biome_diagnostics        = { workspace = true, features = ["std", "bpaf"] }
biome_flags              = { workspace = true }
biome_formatter          = { workspace = true }
biome_fs                 = { workspace = true }
biome_glob               = { workspace = true }
biome_graphql_analyze    = { workspace = true }
biome_graphql_syntax     = { workspace = true }
biome_grit_patterns      = { workspace = true }
biome_html_formatter     = { workspace = true }
biome_js_analyze         = { workspace = true }
biome_js_formatter       = { workspace = true }
biome_js_syntax          = { workspace = true }
biome_json_analyze       = { workspace = true }
biome_json_formatter     = { workspace = true }
biome_json_parser        = { workspace = true }
biome_json_syntax        = { workspace = true }
biome_lsp                = { workspace = true }
biome_migrate            = { workspace = true }
biome_resolver           = { workspace = true }
biome_rowan              = { workspace = true }
biome_rule_options       = { workspace = true }
biome_service            = { workspace = true }
biome_text_edit          = { workspace = true }
bpaf                     = { workspace = true, features = ["bright-color"] }
camino                   = { workspace = true }
crossbeam                = { workspace = true }
dashmap                  = { workspace = true }
path-absolutize          = { workspace = true }
quick-junit              = "0.5.1"
rayon                    = { workspace = true }
regex                    = { workspace = true }
rustc-hash               = { workspace = true }
serde                    = { workspace = true, features = ["derive"] }
serde_json               = { workspace = true }
smallvec                 = { workspace = true }
terminal_size            = { workspace = true }
tokio                    = { workspace = true, features = ["io-std", "io-util", "net", "time", "rt", "sync", "rt-multi-thread", "macros"] }
tracing                  = { workspace = true }
tracing-appender         = "0.2.3"
tracing-subscriber       = { workspace = true, features = ["env-filter", "json"] }
tracing-tree             = "0.4.0"


[target.'cfg(unix)'.dependencies]
libc  = "0.2.175"
tokio = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
biome_css_formatter  = { workspace = true }
biome_js_formatter   = { workspace = true }
biome_json_formatter = { workspace = true }
biome_json_parser    = { workspace = true }
insta                = { workspace = true }
regex                = { workspace = true }
tokio                = { workspace = true, features = ["io-util"] }

[features]
docgen = ["bpaf/docgen"]

[lints]
workspace = true
