[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome Configuration"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_configuration"
repository.workspace = true
version              = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_analyze            = { workspace = true, features = ["serde"] }
biome_console            = { workspace = true }
biome_deserialize        = { workspace = true }
biome_deserialize_macros = { workspace = true }
biome_diagnostics        = { workspace = true }
biome_flags              = { workspace = true }
biome_formatter          = { workspace = true, features = ["serde"] }
biome_glob               = { workspace = true, features = ["schema"] }
biome_html_formatter     = { workspace = true, features = ["serde"] }
biome_html_syntax        = { workspace = true }
biome_js_formatter       = { workspace = true, features = ["serde"] }
biome_json_formatter     = { workspace = true, features = ["serde"] }
biome_json_parser        = { workspace = true }
biome_json_syntax        = { workspace = true }
biome_resolver           = { workspace = true }
biome_rowan              = { workspace = true, features = ["serde"] }
biome_rule_options       = { workspace = true }
bpaf                     = { workspace = true }
camino                   = { workspace = true }
regex                    = { workspace = true }
rustc-hash               = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, features = ["derive"] }

[features]
schema = [
  "dep:schemars",
  "biome_formatter/schema",
  "biome_json_syntax/schema",
  "biome_html_formatter/schema",
  "biome_html_syntax/schema",
  "biome_analyze/schema",
  "biome_json_formatter/schema",
  "biome_js_formatter/schema",
  "biome_rule_options/schema",
]

[dev-dependencies]
criterion    = { package = "codspeed-criterion-compat", version = "=3.0.5" }
insta        = { workspace = true }
tests_macros = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
# currently technically not used, but needed in order to compile because of the `schema` feature
normal = ["biome_html_syntax"]

[[bench]]
harness = false
name    = "biome_json"
