[package]
name                 = "biome_configuration"
version              = "0.0.1"
authors.workspace    = true
edition.workspace    = true
description          = "Biome Configuration"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-udeps.ignore]
# currently technically not used, but needed in order to compile because of the `schema` feature
normal = ["biome_html_syntax"]

[[bench]]
harness = false
name    = "biome_json"

[dependencies]
biome_analyze              = { workspace = true, features = ["serde"] }
biome_configuration_macros = { workspace = true }
biome_console              = { workspace = true }
biome_deserialize          = { workspace = true }
biome_deserialize_macros   = { workspace = true }
biome_diagnostics          = { workspace = true }
biome_formatter            = { workspace = true, features = ["serde"] }
biome_glob                 = { workspace = true, features = ["schema"] }
biome_html_formatter       = { workspace = true, features = ["serde"], optional = true }
biome_html_syntax          = { workspace = true, optional = true }
biome_js_formatter         = { workspace = true, features = ["serde"], optional = true }
biome_json_formatter       = { workspace = true, features = ["serde"], optional = true }
biome_json_syntax          = { workspace = true, optional = true }
biome_plugin_loader        = { workspace = true, optional = true }
biome_resolver             = { workspace = true }
biome_rowan                = { workspace = true, features = ["serde"] }
biome_rule_options         = { workspace = true }
biome_yaml_syntax          = { workspace = true, optional = true }
bpaf                       = { workspace = true, optional = true }
camino                     = { workspace = true }
regex                      = { workspace = true }
rustc-hash                 = { workspace = true }
schemars                   = { workspace = true, optional = true }
serde                      = { workspace = true, features = ["derive"] }

[dev-dependencies]
biome_json_parser = { path = "../biome_json_parser" }
criterion         = { package = "codspeed-criterion-compat", version = "=3.0.5" }
insta             = { workspace = true }
tests_macros      = { workspace = true }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[features]
cli          = ["dep:bpaf"]
lang_css     = ["biome_configuration_macros/lang_css"]
lang_graphql = ["biome_configuration_macros/lang_graphql"]
lang_html    = ["biome_configuration_macros/lang_html", "dep:biome_html_formatter", "dep:biome_html_syntax"]
lang_js      = ["biome_configuration_macros/lang_js", "dep:biome_js_formatter"]
lang_json    = ["biome_configuration_macros/lang_json", "dep:biome_json_formatter"]
lang_md      = []
lang_yaml    = ["dep:biome_yaml_syntax"]
plugins      = ["dep:biome_plugin_loader"]
schema       = [
  "biome_analyze/schema",
  "biome_formatter/schema",
  "biome_html_formatter/schema",
  "biome_html_syntax/schema",
  "biome_js_formatter/schema",
  "biome_json_formatter/schema",
  "biome_json_syntax/schema",
  "biome_plugin_loader/schema",
  "biome_rule_options/schema",
  "biome_yaml_syntax/schema",
  "dep:schemars",
  "lang_css",
  "lang_graphql",
  "lang_html",
  "lang_js",
  "lang_json",
  "plugins",
]
test-utils   = []

[lints]
workspace = true
