[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "biome_control_flow"
repository.workspace = true
version              = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_rowan = { workspace = true }
