[package]
name                 = "biome_css_analyze"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's CSS linter"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
harness = false
name    = "css_analyzer"

[dependencies]
biome_analyze            = { workspace = true }
biome_analyze_macros     = { workspace = true }
biome_console            = { workspace = true }
biome_css_factory        = { workspace = true }
biome_css_semantic       = { workspace = true }
biome_css_syntax         = { workspace = true }
biome_deserialize        = { workspace = true }
biome_deserialize_macros = { workspace = true }
biome_diagnostics        = { workspace = true }
biome_rowan              = { workspace = true }
biome_rule_options       = { workspace = true }
biome_string_case        = { workspace = true }
biome_suppression        = { workspace = true }
camino                   = { workspace = true }
regex                    = { workspace = true }
rustc-hash               = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, features = ["derive"] }

[dev-dependencies]
biome_css_parser    = { path = "../biome_css_parser" }
biome_fs            = { workspace = true }
biome_plugin_loader = { workspace = true }
biome_test_utils    = { path = "../biome_test_utils" }
camino              = { workspace = true }
criterion           = { package = "codspeed-criterion-compat", version = "*" }
insta               = { workspace = true, features = ["glob"] }
tests_macros        = { path = "../tests_macros" }

[build-dependencies]
filetime = { workspace = true }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[features]
schema = ["schemars"]

[lints]
workspace = true
