[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "biome_css_factory"
repository.workspace = true
version              = "0.2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_css_syntax = { workspace = true }
rome_rowan      = { workspace = true }
