[package]
name                 = "biome_css_factory"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "Utilities to create CSS AST for biome_css_parser"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_css_syntax = { workspace = true }
biome_rowan      = { workspace = true }

[lints]
workspace = true
