[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's CSS formatter"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_css_formatter"
repository.workspace = true
version              = "0.5.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_css_syntax  = { workspace = true }
biome_diagnostics = { workspace = true }
biome_formatter   = { workspace = true }
biome_rowan       = { workspace = true }
biome_string_case = { workspace = true }
biome_suppression = { workspace = true }

[dev-dependencies]
biome_configuration  = { path = "../biome_configuration" }
biome_css_parser     = { path = "../biome_css_parser" }
biome_formatter      = { workspace = true, features = ["countme"] }
biome_formatter_test = { path = "../biome_formatter_test" }
biome_fs             = { path = "../biome_fs" }
biome_parser         = { path = "../biome_parser" }
biome_service        = { path = "../biome_service" }
biome_test_utils     = { path = "../biome_test_utils" }
camino               = { workspace = true }
countme              = { workspace = true, features = ["enable"] }
criterion            = { package = "codspeed-criterion-compat", version = "=3.0.5" }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
tests_macros         = { path = "../tests_macros" }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }


# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true

[lints]
workspace = true

[[bench]]
harness = false
name    = "css_formatter"
